GROOVY-11995: groovyc ant task could support passing through system properties or jvmargs