@@ -29,7 +29,10 @@ import org.apache.tools.ant.RuntimeConfigurable;
 import org.apache.tools.ant.taskdefs.Execute;
 import org.apache.tools.ant.taskdefs.Javac;
 import org.apache.tools.ant.taskdefs.MatchingTask;
+import org.apache.tools.ant.types.Commandline;
+import org.apache.tools.ant.types.Environment;
 import org.apache.tools.ant.types.Path;
+import org.apache.tools.ant.types.PropertySet;
 import org.apache.tools.ant.types.Reference;
 import org.apache.tools.ant.util.GlobPatternMapper;
 import org.apache.tools.ant.util.SourceFileScanner;
@@ -54,6 +57,7 @@ import java.nio.charset.Charset;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
@@ -232,6 +236,12 @@ public class Groovyc extends MatchingTask {
     private boolean forceLookupUnnamedFiles;
     private String scriptBaseClass;
     private String configscript;
+
+    // GROOVY-11995: forked-mode JVM args / system properties
+    private final Commandline jvmArgs = new Commandline();
+    private final Environment sysProperties = new Environment();
+    private final List<PropertySet> sysPropertySets = new ArrayList<>(0);
+    private boolean inheritAll;
 
     private Set<String> scriptExtensions = new LinkedHashSet<>();
 
@@ -703,6 +713,56 @@ public class Groovyc extends MatchingTask {
     }
 
     /**
+     * Adds a JVM argument to be passed to the forked compiler. Only takes effect
+     * when {@code fork} is true. Use a nested {@code <jvmarg>} element, e.g.
+     * {@code <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED"/>}.
+     *
+     * @return a new {@code Commandline.Argument} that can be configured by Ant
+     * @since 6.0.0
+     */
+    public Commandline.Argument createJvmarg() {
+        return jvmArgs.createArgument();
+    }
+
+    /**
+     * Adds a system property to be passed to the forked compiler as
+     * {@code -Dkey=value}. Only takes effect when {@code fork} is true.
+     *
+     * @param sysp the system property
+     * @since 6.0.0
+     */
+    public void addSysproperty(Environment.Variable sysp) {
+        sysProperties.addVariable(sysp);
+    }
+
+    /**
+     * Adds a set of system properties (Ant {@code <syspropertyset>}) to be
+     * passed to the forked compiler. Only takes effect when {@code fork} is true.
+     *
+     * @param sysp the property set
+     * @since 6.0.0
+     */
+    public void addSyspropertyset(PropertySet sysp) {
+        sysPropertySets.add(sysp);
+    }
+
+    /**
+     * If true, pass all properties from the parent Ant project to the forked JVM
+     * as system properties so they can be read via {@code System.getProperty(name)}.
+     * Only takes effect when {@code fork} is true. Defaults to false.
+     * <p>
+     * For fine-grained control, use a nested {@code <sysproperty>} or
+     * {@code <syspropertyset>} instead. Both may be combined; explicit nested
+     * entries take precedence on name collision.
+     *
+     * @param inheritAll true to inherit all Ant properties into the forked JVM
+     * @since 6.0.0
+     */
+    public void setInheritAll(boolean inheritAll) {
+        this.inheritAll = inheritAll;
+    }
+
+    /**
      * Enable compiler to report stack trace information if a problem occurs
      * during compilation. Default is false.
      */
@@ -1092,7 +1152,8 @@ public class Groovyc extends MatchingTask {
         return jointOptions;
     }
 
-    private void doForkCommandLineList(List<String> commandLineList, Path classpath, String separator) {
+    // package-private (was private) so tests can verify GROOVY-11995 wiring end-to-end
+    void doForkCommandLineList(List<String> commandLineList, Path classpath, String separator) {
         if (forkedExecutable != null && !forkedExecutable.isEmpty()) {
             commandLineList.add(forkedExecutable);
         } else {
@@ -1141,6 +1202,39 @@ public class Groovyc extends MatchingTask {
             if (tmpExtension.startsWith("*."))
                 tmpExtension = tmpExtension.substring(1);
             commandLineList.add("-Dgroovy.default.scriptExtension=" + tmpExtension);
+        }
+        // GROOVY-11995: user-supplied JVM args / system properties
+        String[] userJvmArgs = jvmArgs.getArguments();
+        for (String arg : userJvmArgs) {
+            if ("-classpath".equals(arg) || "-cp".equals(arg) || "--class-path".equals(arg)
+                    || arg.startsWith("--class-path=")) {
+                throw new BuildException("Setting the JVM classpath via <jvmarg> is not supported "
+                        + "(would override the forked compiler's bootstrap classpath). Use the "
+                        + "<classpath> nested element instead.", getLocation());
+            }
+        }
+        Collections.addAll(commandLineList, userJvmArgs);
+        Set<String> sysPropertyNames = new HashSet<>();
+        for (Environment.Variable v : sysProperties.getVariablesVector()) {
+            sysPropertyNames.add(v.getKey());
+            commandLineList.add("-D" + v.getKey() + "=" + v.getValue());
+        }
+        for (PropertySet ps : sysPropertySets) {
+            for (Map.Entry<Object, Object> entry : ps.getProperties().entrySet()) {
+                String key = entry.getKey().toString();
+                if (sysPropertyNames.add(key)) {
+                    commandLineList.add("-D" + key + "=" + entry.getValue());
+                }
+            }
+        }
+        if (inheritAll) {
+            for (Map.Entry<String, Object> entry : getProject().getProperties().entrySet()) {
+                Object value = entry.getValue();
+                if (value == null) continue;
+                if (sysPropertyNames.add(entry.getKey())) {
+                    commandLineList.add("-D" + entry.getKey() + "=" + value);
+                }
+            }
         }
 
         commandLineList.add(FileSystemCompilerFacade.class.getName());
